Fix diversity aligns

--- a/_sass/diversity.sass
+++ b/_sass/diversity.sass
@@ -3,11 +3,11 @@
     // background: linear-gradient(0.50turn, $secondary-color-light, $primary-color-dark)
     // background-image: url('{{site.baseurl}}/assets/images/background-gradient.jpg')
     color: #fff
-    padding: 6em, 8em
+    padding: 6em 4em
     justify-content: center
-    align-items: center
-    display: flex
-    padding: 2.8em 5em
+    // align-items: center
+    // display: flex
+    // padding: 2.8em 5em
     flex-direction: column
     
     .title
@@ -21,6 +21,9 @@
         font-weight: bold
     
     .text-content
-        display: flex
-        padding: 0.5em 3em
+        text-align: left
+        // @media only screen and (max-width: 634px)
+        //     padding: 0 2em 2em 2em
+        // display: flex
+        // padding: 0.5em 3em
 
